--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dotenv-safe": "^8.2.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "@indeliblelabs/keccak256": "^1.0.0"
   }
 }
