Feature/sig verif (#7)
* Add initial code for AbiEncode class

* Fix AbiEncode for string when length > 32 characters

* Add EvmAddress class

* Check StakingBankStatic validators && verifyValidators

* Deploy StakingBankStatic before Registry in deploy_Registry.ts script

* Add selfDestruct function + export UmbrellaFeeds.hashData

---------

Co-authored-by: sydhds <sydhds@gmail.com>

--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "all:UmbrellaFeedsReader": "npm run build:UmbrellaFeedsReader:debug",
     "build:UmbrellaFeedsReaderFactory:debug": "asc --transform @massalabs/as-transformer assembly/contracts/onChainFeeds/UmbrellaFeedsReaderFactory.ts --target debug --exportRuntime -o ./build/UmbrellaFeedsReaderFactory.wasm",
     "all:UmbrellaFeedsReaderFactory": "npm run build:UmbrellaFeedsReaderFactory:debug",
+    "build:dummy:debug": "asc --transform @massalabs/as-transformer assembly/contracts/dummy.ts --target debug --exportRuntime -o ./build/dummy.wasm",
+    "all:dummy": "npm run build:dummy:debug",
     "build": "run-s all:*",
     "deploy:StakingBankStaticDev": "ts-node src/deploy_StakingBankStaticDev.ts",
+    "deploy:Dummy": "ts-node src/deploy_Dummy.ts",
     "deploy:Registry": "ts-node src/deploy_Registry.ts",
     "deploy:UmbrellaFeeds": "ts-node src/deploy_UmbrellaFeeds.ts",
+    "deploy:UmbrellaFeeds_tests": "ts-node src/deploy_UmbrellaFeeds_tests.ts",
     "deploy:UmbrellaFeedsReader": "ts-node src/deploy_UmbrellaFeedsReader.ts",
     "deploy:UmbrellaFeedsReaderFactory": "ts-node src/deploy_UmbrellaFeedsReaderFactory.ts",
     "test": "asp"
