--- a/package.json
+++ b/package.json
@@ -6,34 +6,35 @@
   "type": "module",
   "scripts": {
     "build:Registry:debug": "asc assembly/contracts/Registry.ts --target debug --exportRuntime -o ./build/Registry.wasm",
-    "all:Registry": "npm run build:Registry:debug",
+    "build:Registry": "npm run build:Registry:debug",
     "build:StakingBankStaticCI:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticCI.ts --target debug --exportRuntime -o ./build/StakingBankStaticCI.wasm",
-    "all:StakingBankStaticCI": "npm run build:StakingBankStaticCI:debug",
+    "build:StakingBankStaticCI": "npm run build:StakingBankStaticCI:debug",
     "build:StakingBankStaticDev:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticDev.ts --target debug --exportRuntime -o ./build/StakingBankStaticDev.wasm",
-    "all:StakingBankStaticDev": "npm run build:StakingBankStaticDev:debug",
+    "build:StakingBankStaticDev": "npm run build:StakingBankStaticDev:debug",
     "build:StakingBankStaticLocal:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticLocal.ts --target debug --exportRuntime -o ./build/StakingBankStaticLocal.wasm",
-    "all:StakingBankStaticLocal": "npm run build:StakingBankStaticLocal:debug",
+    "build:StakingBankStaticLocal": "npm run build:StakingBankStaticLocal:debug",
     "build:StakingBankStaticProd:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticProd.ts --target debug --exportRuntime -o ./build/StakingBankStaticProd.wasm",
-    "all:StakingBankStaticProd": "npm run build:StakingBankStaticProd:debug",
+    "build:StakingBankStaticProd": "npm run build:StakingBankStaticProd:debug",
     "build:StakingBankStaticSbx:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticSbx.ts --target debug --exportRuntime -o ./build/StakingBankStaticSbx.wasm",
-    "all:StakingBankStaticSbx": "npm run build:StakingBankStaticSbx:debug",
+    "build:StakingBankStaticSbx": "npm run build:StakingBankStaticSbx:debug",
     "build:UmbrellaFeeds:debug": "asc assembly/contracts/onChainFeeds/UmbrellaFeeds.ts --target debug --exportRuntime -o ./build/UmbrellaFeeds.wasm",
-    "all:UmbrellaFeeds": "npm run build:UmbrellaFeeds:debug",
+    "build:UmbrellaFeeds": "npm run build:UmbrellaFeeds:debug",
     "build:UmbrellaFeedsReader:debug": "asc assembly/contracts/onChainFeeds/UmbrellaFeedsReader.ts --target debug --exportRuntime -o ./build/UmbrellaFeedsReader.wasm",
     "check:UmbrellaFeedsCommon": "asc assembly/contracts/onChainFeeds/UmbrellaFeedsCommon.ts --target debug --exportRuntime -o ./build/UmbrellaFeedsCommon.wasm",
-    "all:UmbrellaFeedsReader": "npm run build:UmbrellaFeedsReader:debug",
+    "build:UmbrellaFeedsReader": "npm run build:UmbrellaFeedsReader:debug",
     "build:UmbrellaFeedsReaderFactory:debug": "asc --transform @massalabs/as-transformer assembly/contracts/onChainFeeds/UmbrellaFeedsReaderFactory.ts --target debug --exportRuntime -o ./build/UmbrellaFeedsReaderFactory.wasm",
-    "all:UmbrellaFeedsReaderFactory": "npm run build:UmbrellaFeedsReaderFactory:debug",
+    "build:UmbrellaFeedsReaderFactory": "npm run build:UmbrellaFeedsReaderFactory:debug",
     "build:dummy:debug": "asc --transform @massalabs/as-transformer assembly/contracts/dummy.ts --target debug --exportRuntime -o ./build/dummy.wasm",
-    "all:dummy": "npm run build:dummy:debug",
+    "build:dummy": "npm run build:dummy:debug",
     "build": "run-s all:*",
-    "deploy:StakingBankStaticDev": "ts-node src/deploy_StakingBankStaticDev.ts",
     "deploy:Dummy": "ts-node src/deploy_Dummy.ts",
     "deploy:Registry": "ts-node src/deploy_Registry.ts",
+    "deploy:StakingBankStaticDev": "ts-node src/deploy_StakingBankStaticDev.ts",
     "deploy:UmbrellaFeeds": "ts-node src/deploy_UmbrellaFeeds.ts",
-    "deploy:UmbrellaFeeds_tests": "ts-node src/deploy_UmbrellaFeeds_tests.ts",
     "deploy:UmbrellaFeedsReader": "ts-node src/deploy_UmbrellaFeedsReader.ts",
     "deploy:UmbrellaFeedsReaderFactory": "ts-node src/deploy_UmbrellaFeedsReaderFactory.ts",
+    "update:UmbrellaFeeds": "ts-node src/update_UmbrellaFeeds.ts",
+    "register:UmbrellaFeeds": "ts-node src/register_UmbrellaFeeds.ts",
     "test": "asp"
   },
   "repository": {
@@ -48,6 +49,7 @@
   "homepage": "https://github.com/massalabs/umbrella#readme",
   "devDependencies": {
     "@as-pect/cli": "^8.1.0",
+    "@indeliblelabs/keccak256": "^1.0.0",
     "@massalabs/as-transformer": "^0.2.1",
     "@massalabs/as-types": "^1.0.0",
     "@massalabs/massa-as-sdk": "^2.4.0",
@@ -55,13 +57,13 @@
     "@massalabs/massa-web3": "^1.22.0",
     "@massalabs/sc-standards": "^0.0.3-dev",
     "@types/dotenv-safe": "^8.1.2",
+    "as-base58": "^0.1.1",
     "as-base64": "^0.2.0",
     "as-bignum": "^0.2.40",
     "assemblyscript": "^0.25.2",
     "dotenv-safe": "^8.2.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
-    "@indeliblelabs/keccak256": "^1.0.0"
+    "typescript": "^4.8.4"
   }
 }
