Feature/dev doc 1 (#14)
* Add initial internal doc for developers

* Add example to get price data

* Add missing files

* Add command to run the example

---------

Co-authored-by: sydhds <sydhds@gmail.com>

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "deploy:UmbrellaFeedsReaderFactory": "ts-node src/deploy_UmbrellaFeedsReaderFactory.ts",
     "update:UmbrellaFeeds": "ts-node src/update_UmbrellaFeeds.ts",
     "register:UmbrellaFeeds": "ts-node src/register_UmbrellaFeeds.ts",
+    "example:fetch_price": "ts-node src/example_fetch_price.ts",
     "test": "asp"
   },
   "repository": {
