Update package.json with build:XX:release
source: https://github.com/massalabs/umbrella/pull/21

--- a/package.json
+++ b/package.json
@@ -1,42 +1,51 @@
 {
   "name": "umbrella",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "build:Registry:debug": "asc assembly/contracts/Registry.ts --target debug --exportRuntime -o ./build/Registry.wasm",
+    "build:Registry:release": "asc assembly/contracts/Registry.ts --target release -Osize --converge --exportRuntime -o ./build/Registry.wasm",
     "build:Registry": "npm run build:Registry:debug",
     "build:StakingBankStaticCI:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticCI.ts --target debug --exportRuntime -o ./build/StakingBankStaticCI.wasm",
+    "build:StakingBankStaticCI:release": "asc assembly/contracts/stakingBankStatic/StakingBankStaticCI.ts --target release -Osize --converge --exportRuntime -o ./build/StakingBankStaticCI.wasm",
     "build:StakingBankStaticCI": "npm run build:StakingBankStaticCI:debug",
     "build:StakingBankStaticDev:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticDev.ts --target debug --exportRuntime -o ./build/StakingBankStaticDev.wasm",
+    "build:StakingBankStaticDev:release": "asc assembly/contracts/stakingBankStatic/StakingBankStaticDev.ts --target release -Osize --converge --exportRuntime -o ./build/StakingBankStaticDev.wasm",
     "build:StakingBankStaticDev": "npm run build:StakingBankStaticDev:debug",
     "build:StakingBankStaticLocal:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticLocal.ts --target debug --exportRuntime -o ./build/StakingBankStaticLocal.wasm",
+    "build:StakingBankStaticLocal:release": "asc assembly/contracts/stakingBankStatic/StakingBankStaticLocal.ts --target release -Osize --converge --exportRuntime -o ./build/StakingBankStaticLocal.wasm",
     "build:StakingBankStaticLocal": "npm run build:StakingBankStaticLocal:debug",
     "build:StakingBankStaticProd:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticProd.ts --target debug --exportRuntime -o ./build/StakingBankStaticProd.wasm",
+    "build:StakingBankStaticProd:release": "asc assembly/contracts/stakingBankStatic/StakingBankStaticProd.ts --target release -Osize --converge --exportRuntime -o ./build/StakingBankStaticProd.wasm",
     "build:StakingBankStaticProd": "npm run build:StakingBankStaticProd:debug",
     "build:StakingBankStaticSbx:debug": "asc assembly/contracts/stakingBankStatic/StakingBankStaticSbx.ts --target debug --exportRuntime -o ./build/StakingBankStaticSbx.wasm",
+    "build:StakingBankStaticSbx:release": "asc assembly/contracts/stakingBankStatic/StakingBankStaticSbx.ts --target release -Osize --converge --exportRuntime -o ./build/StakingBankStaticSbx.wasm",
     "build:StakingBankStaticSbx": "npm run build:StakingBankStaticSbx:debug",
     "build:UmbrellaFeeds:debug": "asc assembly/contracts/onChainFeeds/UmbrellaFeeds.ts --target debug --exportRuntime -o ./build/UmbrellaFeeds.wasm",
+    "build:UmbrellaFeeds:release": "asc assembly/contracts/onChainFeeds/UmbrellaFeeds.ts --target release -Osize --converge --exportRuntime -o ./build/UmbrellaFeeds.wasm",
     "build:UmbrellaFeeds": "npm run build:UmbrellaFeeds:debug",
     "build:UmbrellaFeedsReader:debug": "asc assembly/contracts/onChainFeeds/UmbrellaFeedsReader.ts --target debug --exportRuntime -o ./build/UmbrellaFeedsReader.wasm",
+    "build:UmbrellaFeedsReader:release": "asc assembly/contracts/onChainFeeds/UmbrellaFeedsReader.ts --target release -Osize --converge --exportRuntime -o ./build/UmbrellaFeedsReader.wasm",
     "check:UmbrellaFeedsCommon": "asc assembly/contracts/onChainFeeds/UmbrellaFeedsCommon.ts --target debug --exportRuntime -o ./build/UmbrellaFeedsCommon.wasm",
     "build:UmbrellaFeedsReader": "npm run build:UmbrellaFeedsReader:debug",
     "build:UmbrellaFeedsReaderFactory:debug": "asc --transform @massalabs/as-transformer assembly/contracts/onChainFeeds/UmbrellaFeedsReaderFactory.ts --target debug --exportRuntime -o ./build/UmbrellaFeedsReaderFactory.wasm",
+    "build:UmbrellaFeedsReaderFactory:release": "asc --transform @massalabs/as-transformer assembly/contracts/onChainFeeds/UmbrellaFeedsReaderFactory.ts --target release -Osize --converge --exportRuntime -o ./build/UmbrellaFeedsReaderFactory.wasm",
     "build:UmbrellaFeedsReaderFactory": "npm run build:UmbrellaFeedsReaderFactory:debug",
     "build:dummy:debug": "asc --transform @massalabs/as-transformer assembly/contracts/dummy.ts --target debug --exportRuntime -o ./build/dummy.wasm",
     "build:dummy": "npm run build:dummy:debug",
     "build": "run-s build:*",
-    "deploy:Dummy": "ts-node src/deploy_Dummy.ts",
-    "deploy:Registry": "ts-node src/deploy_Registry.ts",
-    "deploy:StakingBankStaticDev": "ts-node src/deploy_StakingBankStaticDev.ts",
-    "deploy:UmbrellaFeeds": "ts-node src/deploy_UmbrellaFeeds.ts",
-    "deploy:UmbrellaFeedsReader": "ts-node src/deploy_UmbrellaFeedsReader.ts",
-    "deploy:UmbrellaFeedsReaderFactory": "ts-node src/deploy_UmbrellaFeedsReaderFactory.ts",
-    "update:UmbrellaFeeds": "ts-node src/update_UmbrellaFeeds.ts",
-    "register:UmbrellaFeeds": "ts-node src/register_UmbrellaFeeds.ts",
-    "example:fetch_price": "ts-node src/example_fetch_price.ts",
-    "register:StakingBank": "ts-node src/register_StakingBank.ts",
+    "deploy:Dummy": "tsx src/deploy_Dummy.ts",
+    "deploy:Registry": "tsx src/deploy_Registry.ts",
+    "deploy:StakingBankStaticDev": "tsx src/deploy_StakingBankStaticDev.ts",
+    "deploy:UmbrellaFeeds": "tsx src/deploy_UmbrellaFeeds.ts",
+    "deploy:UmbrellaFeedsReader": "tsx src/deploy_UmbrellaFeedsReader.ts",
+    "deploy:UmbrellaFeedsReaderFactory": "tsx src/deploy_UmbrellaFeedsReaderFactory.ts",
+    "update:UmbrellaFeeds": "tsx src/update_UmbrellaFeeds.ts",
+    "register:UmbrellaFeeds": "tsx src/register_UmbrellaFeeds.ts",
+    "example:fetch_price": "tsx src/example_fetch_price.ts",
+    "register:StakingBank": "tsx src/register_StakingBank.ts",
     "test": "asp"
   },
   "repository": {
@@ -54,9 +63,9 @@
     "@indeliblelabs/keccak256": "^1.0.0",
     "@massalabs/as-transformer": "^0.2.1",
     "@massalabs/as-types": "^2.0.0",
-    "@massalabs/massa-as-sdk": "^2.4.0",
+    "@massalabs/massa-as-sdk": "^2.5.4",
     "@massalabs/massa-sc-deployer": "^1.0.0",
-    "@massalabs/massa-web3": "^1.22.0",
+    "@massalabs/massa-web3": "^3.0.2",
     "@massalabs/sc-standards": "^0.0.3-dev",
     "@types/dotenv-safe": "^8.1.2",
     "as-base58": "^0.1.1",
@@ -67,6 +76,10 @@
     "dotenv-safe": "^8.2.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1",
+    "tsx": "^4.6.2",
     "typescript": "^4.8.4"
+  },
+  "overrides": {
+    "assemblyscript": "^0.25.2"
   }
 }
