Fixes for Reader & ReaderFactory + deploy scripts reworked

--- a/.env
+++ b/.env
@@ -3,3 +3,12 @@ JSON_RPC_URL_PUBLIC=https://buildnet.massa.net/api/v2
 # JSON_RPC_URL_PUBLIC=http://127.0.0.1:33035/api/v2
 MASSA_CHAIN_ID=77658366
 MASSA_NETWORK=buildnet
+
+# StakingBankStatic
+VALIDATORS_COUNT=2
+VALIDATOR_0_ADDRESS=AU12gdmcvpsvHPgVoiHzBiwke6M3fCg6TuMsifDh6Seu185r1FAen
+VALIDATOR_0_PUBLIC_KEY=
+VALIDATOR_0_SECRET_KEY=
+VALIDATOR_1_ADDRESS=AU12LXrTJ7dDQpgdsx2KbT25PBE8a9umKZHp3EgoD3HJdEnuYC9zC
+VALIDATOR_1_PUBLIC_KEY=
+VALIDATOR_1_SECRET_KEY=
